# docmerge

./: .gitignore  LICENSE  README.md  pyproject.toml
docmerge/: __init__.py  cli.py  converter.py  organizer.py
tests/: test_organizer.py
